fix angebote on mobile

--- a/wp-content/themes/fhb/css/style.css
+++ b/wp-content/themes/fhb/css/style.css
@@ -120,7 +120,7 @@ body.home .news-container {
 body.home .events-container {
   padding-top: 15px;
   padding-bottom: 15px;
-  padding-left: 15px;
+  padding-left: 45px;
   padding-right: 15px;
 }
 
@@ -129,7 +129,7 @@ body.home .events-container {
     padding-top: 30px;
     padding-bottom: 30px;
     padding-right: 30px;
-    padding-left: 15px;
+    padding-left: 45px;
   }
 }
 
